--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@types/multer": "^2.0.0",
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
+    "mongoose": "^8.16.4",
     "multer": "^2.0.1",
     "zod": "^3.23.8"
   },
