--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,26 @@
 [build]
-  command = "npm run build:client"
+  command = "npm run build"
   functions = "netlify/functions"
-  publish = "dist/spa"
-
+  publish = "dist"
 
 [functions]
-  external_node_modules = ["express"]
+  external_node_modules = ["express", "mongoose"]
   node_bundler = "esbuild"
+  included_files = [".env"]
   
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--no-audit --no-fund"
+
 [[redirects]]
   force = true
   from = "/api/*"
   status = 200
   to = "/.netlify/functions/api/:splat"
+
+[dev]
+  framework = "#custom"
+  command = "npm run dev"
+  targetPort = 5173
+  port = 8888
+  publish = "dist"
