--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migrate-teams": "tsx server/scripts/migrateTeamNames.ts"
   },
   "dependencies": {
+    "@netlify/functions": "^4.1.12",
     "@types/multer": "^2.0.0",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
